--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1 class="h-primary">Welcome</h1>
         <p>Hallo my name is AmrMaher </p>
         <p>I create content, software, and blogs. </p>
-        <button class="btn" href="https://myzies514451544.wordpress.com/information-technology/">Order Now</button>
+        <a href="https://amrmaherfawziabdeleh1237.blogspot.com/"  class="btn">View my work</a>
     </section>
 
     <section id="services-container">
