--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <footer>
         <div class="center">
-            Copyright © www.myOnlineMeal.com. All rights reserved!
+            Copyright © https://amrmaherfawziabdeleh1237.blogspot.com. All rights reserved!
         </div>
     </footer>
 </body>
