--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav id="navbar">
         <div id="logo" 
-            <img src="" alt="information-technology">
+            <img src="https://github.com/AmrMaher5/information-technology/blob/main/img/IMG_%D9%A2%D9%A0%D9%A2%D9%A3%D9%A0%D9%A5%D9%A0%D9%A9_%D9%A0%D9%A0%D9%A1%D9%A3%D9%A1%D9%A4.jpg?raw=true" alt="information-technology">
         </div>
         <ul>
             <li class="item"><a href="#home">Home</a></li>
