--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="download%20(1).ico">
         <title>information-technology</title>
       </head>
-
+<meta name="google-site-verification" content="y3toUZrG54ZWDDjX_omPfITq6FBP3VdneGwLLkL0VvQ" />
 <body>
     <nav id="navbar">
         <div id="logo" 
