--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lato|Staatliches" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
-        <link rel="shortcut icon" type="image/x-icon" href="download%20(1).ico">
+        <link rel="shortcut icon" type="image/x-icon" href="20231117_133921_.....ico">
         <title>information-technology</title>
       </head>
 <meta name="msvalidate.01" content="4143E235CFDB20F1AF85F2DCDA37A8A4" />
